[package]
name = "stations_watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/lambda.rs"

[[bin]]
name = "watcher"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
similar = "2.1"
aws-config = "0.6.0"
aws-sdk-s3 = "0.6.0"
lambda_runtime = "0.4.1"
async-trait = "0.1.52"
